--- a/pom.xml
+++ b/pom.xml
@@ -17,4 +17,11 @@
       </plugin>
     </plugins>
   </build>
+  <dependencies>
+  	<dependency>
+  		<groupId>com.jgoodies</groupId>
+  		<artifactId>jgoodies-forms</artifactId>
+  		<version>1.8.0</version>
+  	</dependency>
+  </dependencies>
 </project>
